--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,3 +76,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+dependency_overrides:
+  flutter_svg: 0.18.0
