--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,9 @@
 name: rankers_institute
 description: A new Flutter project.
 
+#taskkill /F /IM dart.exe
+#to kill all dart processes
+
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
