--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   adobe_xd: ^1.0.0+1
   firebase_auth: ^0.20.0+1
   cloud_firestore: ^0.16.0
+  flutter_spinkit: "^4.1.2"
 
 dev_dependencies:
   flutter_test:
