--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   firebase_auth: ^0.20.0+1
   cloud_firestore: ^0.16.0
   flutter_spinkit: "^4.1.2"
+  firebase_core : ^0.7.0
 
 dev_dependencies:
   flutter_test:
