--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,9 +33,10 @@ dependencies:
   cupertino_icons: ^1.0.0
   adobe_xd: ^1.0.0+1
   firebase_auth: ^0.20.0+1
-  cloud_firestore: ^0.16.0
+  cloud_firestore: 0.16.0
   flutter_spinkit: "^4.1.2"
   firebase_core : ^0.7.0
+  provider: ^4.3.3
 
 dev_dependencies:
   flutter_test:
