--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_spinkit: "^4.1.2"
   firebase_core : ^0.7.0
   provider: ^4.3.3
+  font_awesome_flutter: ^8.11.0
 
 dev_dependencies:
   flutter_test:
