--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core : ^0.7.0
   provider: ^4.3.3
   font_awesome_flutter: ^8.11.0
+  google_maps_flutter: ^1.1.1
 
 dev_dependencies:
   flutter_test:
