--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^4.3.3
   font_awesome_flutter: ^8.11.0
   google_maps_flutter: ^1.1.1
+  url_launcher: ^5.7.10
 
 dev_dependencies:
   flutter_test:
