--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,9 @@ dependencies:
   font_awesome_flutter: ^8.11.0
   google_maps_flutter: ^1.1.1
   url_launcher: ^5.7.10
+  firebase_storage: ^7.0.0
 
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
