--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   font_awesome_flutter: ^8.11.0
   google_maps_flutter: ^1.1.1
   url_launcher: ^5.7.10
+  flutter_document_picker: ^4.0.1
 
 dev_dependencies:
   flutter_test:
