--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   file_picker: ^1.4.2
   firebase_storage: ^7.0.0
   path: ^1.7.0
+  syncfusion_flutter_charts: ^18.4.47
 
 dev_dependencies:
   flutter_test:
