contact us backend added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_storage: ^7.0.0
   path: ^1.7.0
   syncfusion_flutter_charts: ^18.4.47
+  flutter_email_sender: ^4.0.0
 
 dev_dependencies:
   flutter_test:
